primitives/api/test/tests/ui/impl_missing_version.stderr
error[E0433]: failed to resolve: could not find `ApiV4` in `runtime_decl_for_api`
  --> tests/ui/impl_missing_version.rs:18:13
   |
18 |     impl self::Api<Block> for Runtime {
   |                ^^^ could not find `ApiV4` in `runtime_decl_for_api`

error[E0405]: cannot find trait `ApiV4` in module `self::runtime_decl_for_api`
  --> tests/ui/impl_missing_version.rs:18:13
   |
8  |     pub trait Api {
   |     ------------- similarly named trait `ApiV2` defined here
...
18 |     impl self::Api<Block> for Runtime {
   |                ^^^ help: a trait with a similar name exists: `ApiV2`
